// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkSelector should match snapshot when account connected to Boba (Sepolia) 1`] = `
<DocumentFragment>
  <div
    class="sc-fPXMVe ceppIJ dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
    data-testid="dropdown-network-selector"
  >
    <div
      class="sc-gFqAkR bIEbk dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
    >
      <div
        class="sc-feUZmu jZaohZ"
      >
        <div
          class="sc-ikkxIA cMogLc"
        >
          <img
            alt="token"
            src="bobaEth.svg"
            width="20px"
          />
        </div>
        <p
          class="sc-cwHptR dwYalI"
          data-testid="label-network-selector"
        >
          Boba (Sepolia)
        </p>
        <div
          class="sc-bXCLTC cVmHtU dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
        >
          <div>
            <div
              data-src="arrowdown.svg"
              src=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkSelector should match snapshot when account connected to Boba (Sepolia) 2`] = `
<DocumentFragment>
  <div
    class="sc-fPXMVe ceppIJ dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
    data-testid="dropdown-network-selector"
  >
    <div
      class="sc-gFqAkR ePDDRb dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
    >
      <div
        class="sc-feUZmu jZaohZ"
      >
        <div
          class="sc-ikkxIA cMogLc"
        >
          <img
            alt="token"
            src="bobaEth.svg"
            width="20px"
          />
        </div>
        <p
          class="sc-cwHptR dwYalI"
          data-testid="label-network-selector"
        >
          Boba (Sepolia)
        </p>
        <div
          class="sc-bXCLTC cVmHtU dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
        >
          <div>
            <div
              data-src="arrowdown.svg"
              src=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-fHjqPf fIEXka"
    >
      <div
        class="sc-hmdomO kBXoGb"
      >
        <div
          class="sc-dAbbOL gExODL dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
        >
          Networks
        </div>
        <div
          class="sc-feUZmu dEszSG dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
        >
          <div
            class="sc-ikkxIA cMogLc"
          >
            <img
              alt="token"
              src="bobaEth.svg"
              width="20px"
            />
          </div>
          Boba (Sepolia)
        </div>
        <div
          class="sc-feUZmu jZaohZ dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
        >
          <div
            class="sc-ikkxIA cMogLc"
          >
            <img
              alt="token"
              src="bobaBNB.svg"
              width="20px"
            />
          </div>
          Boba BNB Testnet
        </div>
        <div
          class="sc-feUZmu jZaohZ dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
        >
          <div
            class="sc-ikkxIA cMogLc"
          >
            <img
              alt="token"
              src="optimism.svg"
              width="20px"
            />
          </div>
          Optimism (Sepolia)
        </div>
        <div
          class="sc-feUZmu jZaohZ dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
        >
          <div
            class="sc-ikkxIA cMogLc"
          >
            <img
              alt="token"
              src="arbitrum.svg"
              width="20px"
            />
          </div>
          Arbitrum (Sepolia)
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkSelector should match snapshot when account connected to Ethereum Mainnet 1`] = `
<DocumentFragment>
  <div
    class="sc-fPXMVe ceppIJ dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
    data-testid="dropdown-network-selector"
  >
    <div
      class="sc-gFqAkR bIEbk dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
    >
      <div
        class="sc-feUZmu jZaohZ"
      >
        <div
          class="sc-ikkxIA cMogLc"
        >
          <img
            alt="token"
            src="ethereum.svg"
            width="20px"
          />
        </div>
        <p
          class="sc-cwHptR dwYalI"
          data-testid="label-network-selector"
        >
          Ethereum
        </p>
        <div
          class="sc-bXCLTC cVmHtU dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
        >
          <div>
            <div
              data-src="arrowdown.svg"
              src=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkSelector should match snapshot when account connected to Ethereum Mainnet 2`] = `
<DocumentFragment>
  <div
    class="sc-fPXMVe ceppIJ dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
    data-testid="dropdown-network-selector"
  >
    <div
      class="sc-gFqAkR ePDDRb dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
    >
      <div
        class="sc-feUZmu jZaohZ"
      >
        <div
          class="sc-ikkxIA cMogLc"
        >
          <img
            alt="token"
            src="ethereum.svg"
            width="20px"
          />
        </div>
        <p
          class="sc-cwHptR dwYalI"
          data-testid="label-network-selector"
        >
          Ethereum
        </p>
        <div
          class="sc-bXCLTC cVmHtU dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
        >
          <div>
            <div
              data-src="arrowdown.svg"
              src=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-fHjqPf fIEXka"
    >
      <div
        class="sc-hmdomO kBXoGb"
      >
        <div
          class="sc-dAbbOL gExODL dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
        >
          Networks
        </div>
        <div
          class="sc-feUZmu dEszSG dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
        >
          <div
            class="sc-ikkxIA cMogLc"
          >
            <img
              alt="token"
              src="ethereum.svg"
              width="20px"
            />
          </div>
          Ethereum
        </div>
        <div
          class="sc-feUZmu jZaohZ dropdown sc-kOHTFB sc-dtInlm gHYddX gHHnp"
        >
          <div
            class="sc-ikkxIA cMogLc"
          >
            <img
              alt="token"
              src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/bnb.svg"
              width="20px"
            />
          </div>
          Binance Smart Chain
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
